# fileCombiner

./: CMakeLists.txt
include/: main.hpp
src/: main.cpp
